Fix spacing around svg name

--- a/index.css
+++ b/index.css
@@ -7,10 +7,16 @@
 body {
   font-family: "Cutive Mono", monospace;
   /* font-family: 'Inconsolata', monospace; */
-  padding-bottom: 3rem;
+  padding: 0 0 3rem 0;
+  margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
   padding: 0;
 }
@@ -44,7 +50,7 @@ div.link {
   color: #07a;
 }
 
-.social-link  img {
+.social-link img {
   max-height: 0.75em;
   margin-right: 0.3em;
 }
@@ -56,33 +62,26 @@ div.link {
 
 .subheading {
   font-size: 2rem;
-  margin-left: 1.5rem;
+  margin: 1rem 0 0 1.5rem;
   overflow: hidden;
   white-space: nowrap;
 }
 
 @media (max-width: 600px) {
   .subheading {
+    margin-top: 0.5rem;
     font-size: 1.1rem;
   }
 }
 
-/* This hacky css is to make the svg title scale
-properly in IE 11 */
 div.name {
-  position: relative;
-  height: 0;
-  padding: 0;
-  padding-bottom: 13%;
   max-width: 60rem;
+  padding: 1.5rem 1.5rem 0 1.5rem;
 }
 
-div.name > svg {
-  position: absolute;
-  height: 100%;
+div.name svg {
   width: 100%;
-  left: 0;
-  top: 0;
+  max-height: 5rem;
 }
 
 .cm-field {
@@ -99,7 +98,7 @@ div.name > svg {
   border-radius: 0;
 }
 
-@media(max-width: 44rem) {
+@media (max-width: 44rem) {
   .cm-input {
     width: 100%;
   }
